# StructureLab_HFS_CNT

./: # Reporte Metodos Pernos 1 (Splice).txt  .gitignore  Naming_bseep.txt  Programacion_conexion_columna_placa_base_AISC.xlsx  README.md  VARIABLES_SPLICE_NAMING.txt  propuesta_renombrado_variables_bseep.txt  pyproject.toml
.tmp_test_outputs/case_003_bseep_8es_split_inputs/: detailed.json  memory.md
data/: materials.xlsx  sections.xlsx
docs/: architecture_current.md  baseline_numerico.md  dry_audit.md  funciones_dry_compartidas.md  golden_comparison.md  markdown_writer_dependency_inventory.md  migration_closure.md  phase2_reporting_completion.md  test_failures_triage.md
examples/Fully Restrained Moment/: INPUTS_SPLICE.md  case_001_bbmb_splice.json  case_001_bbmb_splice_test_f_floor.json
examples/moment_prequalified/: README.md  case_002_bueep_4e.json  case_003_bseep_8es.json  case_004_bseep_4es.json
examples/moment_prequalified/_tmp_case003_right_only/: case_003_beam_right_only.json  case_003_column_and_common.json
examples/moment_prequalified/case_002_bueep_4e_split_inputs/: README.md  case_002_beam_left_only.json  case_002_beam_right_only.json  case_002_column_and_common.json
examples/moment_prequalified/case_003_bseep_8es_split_inputs/: README.md  assemble_case_003.py  (+3 more)
results/case_002_bueep_4e/: detailed.json
results/case_003_bseep_8es/: detailed.json
results/case_004_bseep_4es/: detailed.json
scripts/: quality_gate.py
src/: __init__.py
src/steel_connections/: __init__.py  run.py
tests/: conftest.py
tests/helpers/: golden_compare.py
(+162 files in other folders)
