[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steel-connections-engine"
version = "0.1.0"
description = "Deterministic and auditable structural steel connection design engine."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
norecursedirs = ["pytest-cache-files-*", ".venv"]
